kubernetes_deployment/backend_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: backend
  name: backend
  namespace: training-app-backend-prod
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:

      volumes:
        - name: qr-data
      containers:
        - image: youssef2023/comwork-backend:v2-latest
          name: backend-container
          imagePullPolicy: Always
          # restartPolicy: Never        
          resources:
            limits:
              memory: "128Mi"
              cpu: "100m" 
          ports:
            - containerPort: 3000
              name: backend
        - image: youssef2023/comwork-qr:v2-latest
          name: qr-container
          imagePullPolicy: Always
          # restartPolicy: Never 
          ports:
            - containerPort: 8420
              name: qr
          # volumeMounts:
          #   - mountPath: /app/scripts/generated_qr
          #     name: qr-data
