kubernetes_deployment/frontend_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: frontend
  name: frontend
  namespace: training-app-frontend-prod
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - image: youssef2023/comwork-website:v2
          name: application-website
          resources:
            limits:
              memory: "128Mi"
              cpu: "50m"
          ports:
            - containerPort: 4200
          volumeMounts:
            - name: configs
              mountPath: /etc/nginx/html/assets/configs
      volumes:
        - name: configs
          configMap:
            name: configs-front
