kubernetes_deployment/backend_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: training-app-backend-prod
spec:
  type: LoadBalancer
  ports:
    - port: 8080
      targetPort: 3000
  selector:
    app: backend
