kubernetes_deployment/frontend_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  namespace: training-app-frontend-prod
spec:
  type: LoadBalancer
  ports:
    - port: 80
      targetPort: 4200
  selector:
    app: frontend
